Fix news-featured section button behaviour on mobile

--- a/src/styles/sections/_news.scss
+++ b/src/styles/sections/_news.scss
@@ -17,13 +17,6 @@
     flex-wrap: wrap;
   }
 
-  @media (max-width: 767px) {
-    a {
-      order: 1;
-      margin: 0 auto 90px auto;
-    }
-  }
-
   .row {
     position: relative;
     display: none;
@@ -36,6 +29,14 @@
       position: absolute;
       right: 15px;
       top: -80px;
+
+      @media (max-width: 767px) {
+        & {
+          position: static;
+          order: 1;
+          margin: 0 auto 90px auto;
+        }
+      }
     }
   }
 
